--- a/viewsejs/modulos/head.ejs
+++ b/viewsejs/modulos/head.ejs
@@ -3,7 +3,10 @@
 <link rel="stylesheet" href="/css/boot.css">
 <link rel="stylesheet" href="/css/general.css">
 <link rel="stylesheet" href="/css/template.css">
+<link rel="stylesheet" href="/css/product-cards.css">
 <link rel="stylesheet" href="/css/newsletter.css">
+<link rel="stylesheet" href="/css/currency-styles.css">
+<link rel="stylesheet" href="/css/tiendas.css">
 
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" rel="stylesheet" />
 <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
