--- a/public/css/template.css
+++ b/public/css/template.css
@@ -1034,354 +1034,11 @@ Best Deal Style
 
 /* 
 ---------------------------------------------
-Properties Style
+Properties Style - Mejorado
 --------------------------------------------- 
 */
 
-.properties .item {
-  background-color: #fafafa;
-  border-radius: 10px;
-  padding: 30px;
-  margin-bottom: 30px;
-  max-width: 300px;
-  
-}
-
-.properties{
-  display: flex;
-}
-
-.properties .item img {
-  border-radius: 10px;
-  max-width: 240px;
-  max-height: 160px;
-  width: 240px;
-  height: 160px;
-}
-
-.properties .item span.category {
-  background-color: #fbd9cf;
-  font-weight: 500;
-  border-radius: 5px;
-  font-size: 14px;
-  color: #1e1e1e;
-  padding: 5px 12px;
-  display: inline-block;
-  margin-top: 25px;
-}
-
-.properties .item h4 {
-  font-size: 19px;
-  margin: 25px 0px;
-}
-
-.properties .item h4 a {
-  color: #1e1e1e;
-}
-
-.properties .item ul li {
-  display: inline-block;
-  font-size: 15px;
-  color: #4a4a4a;
-  margin-right: 20px;
-}
-
-.properties .item ul li span {
-  font-weight: 600;
-  color: #1e1e1e;
-}
-
-.properties .item ul {
-  border-bottom: 1px solid #eaeaea;
-  margin-bottom: 30px;
-  padding-bottom: 30px;
-}
-
-.properties .item h6 {
-  font-size: 20px;
-  color: #f35525;
-  margin-top: 6px;
-  display: inline-block;
-  float: right;
-  margin-top: 30px;
-}
-
-.properties .item .main-button {
-  text-align: center;
-}
-
-
-
-
-
-/* 
----------------------------------------------
-Contact Style
---------------------------------------------- 
-*/
-
-.contact {
-  background-image: url(../assets/img/ferreteria.png);
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center center;
-  padding: 100px 0px 250px 0px;
-  position: relative;
-}
-
-.contact .section-heading h2 {
-  color: #fff; 
-  background-color: rgba(0, 0, 0, 0.5);
-  padding: 10px; 
-}
-
-
-.contact-content {
-  margin-top: -240px;
-  position: relative;
-  z-index: 1;
-}
-
-.contact-content #map {
-  border-radius: 10px;
-  margin-bottom: 60px;
-}
-
-.contact-content .item {
-  border-radius: 10px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
-  padding: 35px 30px;
-  background-color: #fff;
-}
-
-.contact-content .phone {
-  margin-right: 15px;
-}
-
-.contact-content .email {
-  margin-left: 15px;
-}
-
-.contact-content .item img {
-  float: left;
-  margin-right: 25px;
-  vertical-align: middle;
-}
-
-.contact-content .item h6 {
-  font-size: 20px;
-  font-weight: 600;
-  vertical-align: middle;
-}
-
-.contact-content .item h6 span {
-  font-size: 15px;
-  color: #aaaaaa;
-  font-weight: 400;
-}
-
-.contact-content #contact-form {
-  margin-left: 30px;
-  border-radius: 10px;
-  box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.15);
-  padding: 35px 30px;
-  background-color: #fff;
-}
-
-.contact-content #contact-form label {
-  font-size: 15px;
-  color: #3a3a3a;
-  margin-bottom: 15px;
-}
-
-.contact-content #contact-form input {
-  width: 100%;
-  height: 44px;
-  border-radius: 22px;
-  background-color: #f6f6f6;
-  border: none;
-  margin-bottom: 30px;
-  font-size: 14px;
-  padding: 0px 15px;
-}
-
-.contact-content #contact-form textarea {
-  width: 100%;
-  height: 150px;
-  max-height: 180px;
-  border-radius: 22px;
-  background-color: #f6f6f6;
-  border: none;
-  margin-bottom: 40px;
-  font-size: 14px;
-  padding: 15px 15px;
-}
-
-.contact-content #contact-form button {
-  background-color: #1e1e1e;
-  height: 44px;
-  border-radius: 22px;
-  padding: 0px 20px;
-  color: #fff;
-  border: none;
-  font-size: 15px;
-  font-weight: 500;
-  transition: all .5s;
-}
-
-.contact-content #contact-form button:hover {
-  background-color: #f35525;
-}
-
-
-/* 
----------------------------------------------
-Footer Style
---------------------------------------------- 
-*/
-
-footer.footer-no-gap {
-  margin-top: 0px;
-}
-
-footer {
-  margin-top: 150px;
-  background-color: #1e1e1e;
-  min-height: 100px;
-}
-
-footer p {
-  text-align: center;
-  line-height: 100px;
-  color: #fff;
-  font-size: 16px;
-  font-weight: 400;
-}
-
-footer p a {
-  color: #fff;
-  transition: all .3s;
-  position: relative;
-  z-index: 3;
-}
-
-footer p a:hover {
-  opacity: 0.75;
-}
-
-
-/* 
----------------------------------------------
-Page Header Style
---------------------------------------------- 
-*/
-
-.page-heading {
-  background-image: url(../images/page-heading-bg.jpg);
-  background-position: center bottom;
-  background-repeat: no-repeat;
-  background-size: cover;
-  padding: 110px 0px;
-  text-align: center;
-}
-
-.page-heading span {
-  background-color: #fff;
-  color: #1e1e1e;
-  font-size: 14px;
-  font-weight: 500;
-  text-transform: uppercase;
-  padding: 10px 25px;
-  display: inline-block;
-  margin-bottom: 30px;
-}
-
-.page-heading span a {
-  color: #1e1e1e;
-}
-
-.page-heading h3 {
-  font-size: 48px;
-  font-weight: 900;
-  text-transform: uppercase;
-  color: #fff;
-}
-
-
-/* 
----------------------------------------------
-Properties Style
---------------------------------------------- 
-*/
-
-.properties ul.properties-filter {
-  list-style: none;
-  text-align: center;
-  margin-bottom: 70px;
-}
-
-.properties ul.properties-filter li {
-  display: inline-block;
-  margin: 5px 8px;
-}
-
-.properties ul.properties-filter li a {
-  display: inline-block;
-  text-align: center;
-  font-size: 15px;
-  text-transform: capitalize;
-  font-weight: 500;
-  color: #fff;
-  background-color: #1e1e1e;
-  padding: 12px 25px;
-  border-radius: 5px;
-  transition: all .3s;
-}
-
-.properties ul.properties-filter li a.is_active {
-  background-color: #f35525;
-  color: #fff;
-}
-
-.properties ul.properties-filter li a.is_active:hover {
-  color: #fff;
-}
-
-.properties ul.properties-filter li a:hover {
-  color: #f35525;
-}
-
-.properties ul.pagination {
-  margin-top: 50px;
-  text-align: center;
-  width: 100%;
-  display: inline-block;
-}
-
-.properties ul.pagination li {
-  display: inline-block;
-  margin: 0px 5px;
-}
-
-.properties ul.pagination li a {
-  display: inline-block;
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  text-align: center;
-  background-color: #1e1e1e;
-  color: #fff;
-  font-size: 15px;
-  font-weight: 600;
-  border-radius: 50%;
-  transition: all .3s;
-}
-
-.properties ul.pagination li a:hover,
-.properties ul.pagination li a.is_active {
-  background-color: #f35525;
-  color: #fff;
-}
+/* Estilos antiguos eliminados - ver estilos mejorados más abajo */
 
 
 /* 
@@ -1752,6 +1409,43 @@ body {
 
 .precioDolar{
   margin-left: 180px;
+}
+
+/* Estilos de Properties movidos a product-cards.css */
+
+.properties .item ul li span {
+  font-weight: 600;
+  color: #3a3a3a;
+}
+
+.properties ul.properties-filter {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 40px;
+  border-bottom: 2px solid #f35525;
+  padding-bottom: 20px;
+  text-align: center;
+}
+
+.properties ul.properties-filter li {
+  display: inline-block;
+  margin: 0 10px;
+}
+
+.properties ul.properties-filter li a {
+  display: inline-block;
+  padding: 8px 20px;
+  color: #1e1e1e;
+  font-size: 14px;
+  font-weight: 500;
+  border-radius: 20px;
+  transition: all 0.3s ease;
+}
+
+.properties ul.properties-filter li a:hover,
+.properties ul.properties-filter li a.is_active {
+  background-color: #f35525;
+  color: #fff;
 }
 
 
